2nd attempt at avoiding resize (overflow: hidden)
The previous attempt had all transitions to "none". Those are removed in this version.

--- a/homeSection.css
+++ b/homeSection.css
@@ -74,6 +74,7 @@ div.portrait {
     align-items: flex-end;
     justify-content: flex-start;
     animation: transitionInPortrait 2s;
+    overflow: hidden;
 
 }
 
@@ -131,7 +132,6 @@ div.portrait img {
         display: inline-block;
         width: 100%;
         height: calc(100vh - var(--navHeightMobile));
-        transition: none;
     }
 
     div.intro {
@@ -139,7 +139,6 @@ div.portrait img {
         align-items: center;
         margin: 0;
         height: 35%;
-        transition: none;
     }
 
     .home h1 {
@@ -150,7 +149,6 @@ div.portrait img {
         display: flex;
         font-size: 90px;
         text-align: center;
-        transition: none;
     }
 
     .home p {
@@ -158,7 +156,6 @@ div.portrait img {
         text-align: center;
         padding-left: 10%;
         padding-right: 10%;
-        transition: none;
     }
 
     .intro button {
@@ -168,7 +165,6 @@ div.portrait img {
     div.portrait {
         justify-content:center;
         height: 65%;
-        transition:none;
     }
 
     div.portrait img {
